<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/v_loginActivity_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"

    tools:context="clairehofmann.blackjack_take2.LoginActivity"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/v_blackjackLogo"
        android:layout_width="wrap_content"
        android:layout_height="122dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/blackjack_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/reallogo" />

    <LinearLayout
        android:id="@+id/v_loginLayout"
        android:layout_width="0dp"
        android:layout_height="300dp"

        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_blackjackLogo"
        app:layout_constraintVertical_bias="1.0">

        <AutoCompleteTextView
            android:id="@+id/v_email_editTxt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/v_password_editTxt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20sp"
            android:textStyle="normal|bold|italic" />

        <TextView
            android:id="@+id/v_errorTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorError"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/v_loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/login" />

        <Button
            android:id="@+id/v_newPlayerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/new_player" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
