<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rainbow"
    tools:context="clairehofmann.blackjack_take2.AdminAddUser"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <EditText
            android:id="@+id/v_newPlayerReg_emailEditText"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fadingEdge="none"
            android:hint="@string/required"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textStyle="italic"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="8dp" />

        <EditText
            android:id="@+id/v_aei_passEditText"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/required"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textStyle="italic"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="62dp" />

        <EditText
            android:id="@+id/v_newPlayerReg_confirmPassEditText"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/required"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textStyle="italic"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="117dp" />

        <EditText
            android:id="@+id/v_aei_fNameEditText"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/required"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textStyle="italic"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="172dp" />

        <EditText
            android:id="@+id/v_aei_lNameEditText"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/required"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textStyle="italic"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="227dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="248dp"
        android:layout_marginBottom="27dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/v_aei_updateBtn"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"
            android:text="@string/emailP"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="37dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"
            android:text="@string/password_reg"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="146dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"
            android:text="@string/re_enter_password"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="130dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"
            android:text="@string/first_nameP"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="201dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"
            android:text="@string/last_nameP"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="256dp" />

    </LinearLayout>

    <Button
        android:id="@+id/v_aei_updateBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/register_new_player"
        app:layout_constraintBottom_toTopOf="@+id/v_aei_cancelBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/v_aei_cancelBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_aei_updateBtn" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/blackjack_logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/reallogo" />

</android.support.constraint.ConstraintLayout>
