<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context="clairehofmann.blackjack_take2.NonAdminMainScreen">

    <Button
        android:id="@+id/v_nams_playBtn"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/play_blackjack"
        app:layout_constraintBottom_toTopOf="@+id/v_nams_manageBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="173dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/v_nams_manageBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/reallogo" />

    <Button
        android:id="@+id/v_nams_manageBtn"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:layout_marginBottom="217dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/manage_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/v_nams_logoutBtn"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_nams_manageBtn" />
</android.support.constraint.ConstraintLayout>
