<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rainbow"
    tools:context="clairehofmann.blackjack_take2.AdminAddUser"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/v_aei_updateBtn"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:text="@string/emailP"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/v_newPlayerReg_emailEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:text="@string/passwordP"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/v_aei_passEditText"
            app:layout_constraintEnd_toStartOf="@+id/v_aei_passEditText"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:text="@string/first_nameP"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/v_aei_fNameEditText"
            app:layout_constraintEnd_toStartOf="@+id/v_aei_fNameEditText"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:text="@string/last_nameP"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/v_aei_lNameEditText"
            app:layout_constraintEnd_toStartOf="@+id/v_aei_lNameEditText"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/adminP"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/v_aei_adminEditText"
            app:layout_constraintEnd_toStartOf="@+id/v_aei_adminEditText"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/TextView6"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:text="@string/cashP"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/v_aei_cashEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/v_aei_updateBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/v_newPlayerReg_emailEditText"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/required"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView1"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/v_aei_passEditText"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/required"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/v_newPlayerReg_emailEditText" />

        <EditText
            android:id="@+id/v_aei_lNameEditText"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/required"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/v_aei_fNameEditText" />

        <EditText
            android:id="@+id/v_aei_fNameEditText"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/required"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/v_aei_passEditText" />

        <EditText
            android:id="@+id/v_aei_adminEditText"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/required"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/v_aei_lNameEditText" />

        <EditText
            android:id="@+id/v_aei_cashEditText"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/required"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/TextView6"
            app:layout_constraintTop_toBottomOf="@+id/v_aei_adminEditText" />

    </LinearLayout>

    <Button
        android:id="@+id/v_aei_updateBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/add_player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <Button
        android:id="@+id/v_aei_cancelBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_aei_updateBtn" />

</android.support.constraint.ConstraintLayout>
