<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/v_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rainbow"
    tools:context="clairehofmann.blackjack_take2.AdminScreen"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_listView">

        <Button
            android:id="@+id/v_adminScreen_playBtn"
            android:layout_width="match_parent"
            android:layout_height="39dip"
            android:text="@string/play_blackjack"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="436dp" />

        <Button
            android:id="@+id/v_btn_addUser"
            android:layout_width="match_parent"
            android:layout_height="39dip"
            android:text="@string/add_player"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="473dp" />

        <Button
            android:id="@+id/v_btn_logout"
            android:layout_width="match_parent"
            android:layout_height="39dip"
            android:text="@string/log_out"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="512dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/v_listView"
        android:layout_width="368dp"
        android:layout_height="419dp"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ListView>

</android.support.constraint.ConstraintLayout>
